fix gap between auth buttons

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -67,7 +67,7 @@ a {
 
 .button {
   border: 0;
-  padding: 1rem 0.75rem;
+  padding: 1rem 0.25rem;
   background-color: transparent;
   cursor: pointer;
 }
